--- a/src/_data/sources.yml
+++ b/src/_data/sources.yml
@@ -1133,3 +1133,16 @@
   reading_descriptions:
     cross-domain-calibration: 'Empirical study of how vibe coding alters collaboration, responsibility, and trust in product teams.'
     rapid-prototyping: 'Shows how AI-assisted generation speeds ideation while introducing integration and reliability concerns.'
+
+- id: stack_overflow_developer_survey_2024_ai
+  title: '2024 Stack Overflow Developer Survey: AI'
+  publisher: 'Stack Overflow'
+  published: '2024'
+  accessed: '2026-02-11'
+  url: 'https://survey.stackoverflow.co/2024/ai'
+  tags:
+    - ai-production-scale
+    - responsibility-oversight
+  reading_descriptions:
+    ai-production-scale: 'Large-sample developer sentiment and usage data on AI tools in software development.'
+    responsibility-oversight: 'Highlights how adoption can rise while confidence and perceived quality remain mixed, reinforcing the need for oversight.'
